--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -13,6 +13,9 @@
   <property name="windowTitle">
    <string>首页</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(255, 255, 255);</string>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
@@ -33,8 +36,8 @@
           <rect>
            <x>0</x>
            <y>0</y>
-           <width>329</width>
-           <height>535</height>
+           <width>331</width>
+           <height>537</height>
           </rect>
          </property>
          <property name="cursor">
@@ -44,7 +47,7 @@
           <bool>false</bool>
          </property>
          <property name="autoFillBackground">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
           <item row="1" column="0">
